...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="270dp"
        android:layout_height="180dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="47dp"
        android:visibility="visible"
        android:onClick="goImages"
...
        android:hint="year"
        android:inputType="textPersonName"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="1dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="164dp"
        android:layout_height="56dp"

        android:onClick="saveArt"
        android:text="save"
   android:layout_marginTop="1dp"
...
